Added changes to html and css

--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
    
     <title>NFT Réplique</title>
+    <!--This is the font outside-->
     <link rel="stylesheet" href = "style.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!--I use div to make a block-->
     <div id="box">
         <img src ="image-equilibrium.jpg" alt="Image d'un glaçon"/>
         <p>Equilibrium #3429</p>
         <p class ="Taille">Our Equilibrium collection promotes balance and calm.</p>
     <p class ="tailleEth"><img class = "ether" src = "icon-ethereum.svg" alt = "logo etherum cryptomonnaie"/> 0.041 ETH </p>
+    <!--Below this line is for the logo clock-->
     <!--<p><img class="montre" src = "icon-clock.svg"  alt = "montre"/></p>-->
     <hr/>
     <p><img class="avatar" src = "image-avatar.png" alt = "Image d'un avatar"/></p>
