--- a/index.html
+++ b/index.html
@@ -1,27 +1,48 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-   
-    <title>NFT Réplique</title>
-    <!--This is the font outside-->
-    <link rel="stylesheet" href = "style.css"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
+  
+  <title>Frontend Mentor | NFT preview card component</title>
+
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
+  </style>
 </head>
 <body>
-    <!--I use div to make a block-->
-    <div id="box">
-        <img src ="image-equilibrium.jpg" alt="Image d'un glaçon"/>
-        <p>Equilibrium #3429</p>
-        <p class ="Taille">Our Equilibrium collection promotes balance and calm.</p>
-    <p class ="tailleEth"><img class = "ether" src = "icon-ethereum.svg" alt = "logo etherum cryptomonnaie"/> 0.041 ETH </p>
-    <!--Below this line is for the logo clock-->
-    <!--<p><img class="montre" src = "icon-clock.svg"  alt = "montre"/></p>-->
-    <hr/>
-    <p><img class="avatar" src = "image-avatar.png" alt = "Image d'un avatar"/></p>
-    
+  <div class="box">
+    <img src="image-equilibrium.jpg" alt="Image d'un glaçon"/>
+    <p>Equilibrium #3429</p>
+    <p class ="Taille">Our Equilibrium collection promotes balance and calm.</p>
+<p class="tailleEth"><img class="ether" src="icon-ethereum.svg" alt="logo etherum cryptomonnaie"/> 0.041 ETH </p>
+<!--Below this line is for the logo clock-->
+<!--<p><img class="montre" src="icon-clock.svg"  alt="montre"/></p>-->
+<hr/>
+<p><img class="avatar" src ="image-avatar.png" alt="Image d'un avatar"/></p>
+
 </div>
+
+  <!--Equilibrium #3429
+
+  Our Equilibrium collection promotes balance and calm.
+
+  0.041 ETH
+  3 days left
+  
+  Creation of Jules Wyvern-->
+
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Alban Vigliano</a>.
+  </div>
 </body>
 </html>
