Modifications file index.html style.cc

--- a/index.html
+++ b/index.html
@@ -23,9 +23,15 @@
     <img src="image-equilibrium.jpg" alt="Image d'un glaçon"/>
     <p>Equilibrium #3429</p>
     <p class="Taille">Our Equilibrium collection promotes balance and calm.</p>
-<p class="tailleEth"><img class="ether" src="icon-ethereum.svg" alt="logo etherum cryptomonnaie"/> 0.041 ETH </p>
+    <div class="montre1"><p><img class="montre" src="icon-clock.svg"  alt="montre"/></p></div>
+<!--<div class="tailleEth"><img class="ether" src="icon-ethereum.svg" alt="logo etherum cryptomonnaie"/>  0.041 ETH </div>-->
+<p><img class="ether" src="icon-ethereum.svg" alt="logo etherum cryptomonnaie"/></p>
+<p class="days">3 days left</p>
+<p class="author">Creation of</p> 
+<p class="name">Jules Wyvern</p>
+<p class="prix">0.041 ETH</p>
 <!--Below this line is for the logo clock-->
-<!--<p><img class="montre" src="icon-clock.svg"  alt="montre"/></p>-->
+<!--<div class="montre1"><p><img class="montre" src="icon-clock.svg"  alt="montre"/></p></div>-->
 <hr/>
 <p><img class="avatar" src ="image-avatar.png" alt="Image d'un avatar"/></p>
 
